[gd_scene load_steps=2 format=3 uid="uid://b30ao55e70h7a"]

[ext_resource type="Script" path="res://scripts/weapon_base.gd" id="1_xobto"]

[node name="WeaponBase" type="Area2D"]
script = ExtResource("1_xobto")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]

[node name="ThrowSound" type="AudioStreamPlayer2D" parent="."]
